packages/moonstone/SimpleIntegerPicker/SimpleIntegerPicker.less
// SimpleIntegerPicker.less
//
@import '../styles/mixins.less';
@import '../styles/skin.less';
@import '../styles/variables.less';

.simpleIntegerPicker {
	vertical-align: middle;
	padding: @moon-simple-integer-picker-border-size;

	&.editable {
		box-shadow: inset 0 0 0 @moon-simple-integer-picker-border-size;  // box-shadow color inherits from `color` if one is provided
	}

	.input {
		width: 100%;
		text-align: center;
		border-style: none;
		border-width: 0;
		font-family: inherit;
		font-size: inherit;

		&.hidden {
			display: none;
		}
	}

	// Skin colors
	.applySkins({
		&.editable {
			background-color: @moon-picker-editable-input-bg-color;
			color: @moon-picker-editable-input-text-color;
		}

		.input {
			color: inherit;
		}

	});
}

